landing page design complete

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,11 +1,5 @@
-body {
-    padding: 25px;
-    background-color: white;
-    color: black;
-    font-size: 25px;
-  }
-  
-  .dark-mode {
-    background-color: black;
-    color: white;
-  }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
