--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3,3 +3,50 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.blog-header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    border-bottom: .5em black double;
+}
+.h4 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+}
+
+.button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:flex-end
+}
+
+a {
+    text-decoration: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 8px 16px;
+    justify-content: flex-end;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.back {
+    background-color: black;
+    color: white;
+    font-size: 15px;    
+    width: 50px;
+    line-height: .5vh;
+    justify-content: center;
+
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
