--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -12,6 +12,7 @@
     background-color: white;
     border-bottom: .5em black double;
 }
+
 .h4 {
     display: flex;
     flex-wrap: wrap;
@@ -21,7 +22,7 @@
 .button {
     display: flex;
     flex-wrap: wrap;
-    justify-content:flex-end
+    justify-content: flex-end
 }
 
 a {
@@ -32,6 +33,36 @@ a {
     justify-content: flex-end;
 }
 
+
+.blog-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px black solid;
+    align-items: start;
+    margin-top: 20px;
+}
+
+.blog-post {
+    width: 50%;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.blog-title {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.blog-content {
+    margin-bottom: 5px;
+}
+
+.blog-author {
+    font-style: italic;
+}
+
 a:hover {
     background-color: #ddd;
     color: black;
@@ -40,7 +71,7 @@ a:hover {
 .back {
     background-color: black;
     color: white;
-    font-size: 15px;    
+    font-size: 15px;
     width: 50px;
     line-height: .5vh;
     justify-content: center;
@@ -50,3 +81,14 @@ a:hover {
 .dark-mode {
     background-color: black;
     color: white;
+}
+
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 20px;
+    align-items: center;
+    font-size: 20px;
+    border-top: .5em black double;
+}
