--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ body {
     height: 100vh;
 }
 
+
 main {
     display: flex;
     flex-wrap: wrap;
@@ -24,7 +25,7 @@ main {
 .main-header {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: space-between;
     background-color: white;
     border-bottom: .5em black double;
 }
@@ -58,7 +59,7 @@ main {
   display: flex;
 }
 
-.dark-mode {
+.dark {
   background-color: black;
   color: white;
 }
