--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -19,10 +19,18 @@
     justify-content: left;
 }
 
-.button {
+.btns-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end
+  }
+
+#backBtn {
+    font-size: 25px;
+}
+
+.checkbox {
+    font-size: 25px;
 }
 
 a {
@@ -46,8 +54,7 @@ a {
 }
 
 .blog-post {
-    width: 50%;
-   
+    width: 50%;   
     border: 2px solid #ccc;
     border-radius: 5px;
     padding: 10px;
@@ -93,7 +100,7 @@ a:hover {
 .footer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: ;
     padding-bottom: 20px;
     align-items: center;
     font-size: 20px;
